--- a/3° Año/Metodología de Sistemas I/Unidad 9/2. Extreme Programing.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 9/2. Extreme Programing.md
@@ -19,18 +19,18 @@ Además de poseer los valores de las metodologías ágiles, XP posee sus propios
 
 ![[MS-XP1.png]]
 
-1. Juego de la planificación: se determina rápidamente el alcance de la próxima versión combinando las prioridades del negocio y las estimaciones técnicas.
-2. Pequeños release: El equipo de desarrollo debe ser capaz de liberar versiones iterativas con frecuencia a los clientes.
-3. Metáfora: permite guiar todo el desarrollo con una sencilla historia compartida de cómo funciona todo el sistema.
-4. Diseño simple: el sistema debe diseñarse de la manera más simple posible en cualquier momento. La complejidad adicional se elimina tan pronto como se descubre.
-5. Pruebas: los programadores escriben continuamente pruebas unitarias, que deben ejecutarse sin problemas para que continúe el desarrollo. Los clientes escriben pruebas que demuestran que las funciones están terminadas.
-6. Refactorización: los programadores reestructuran el sistema sin cambiar su comportamiento para eliminar la duplicación, mejorar la comunicación, simplificar o agregar flexibilidad.
-7. Programación por pares: todo el código de producción se escribe con dos programadores en una sola máquina.
-8. Propiedad colectiva: cualquiera puede cambiar cualquier código en cualquier lugar del sistema en cualquier momento.
-9. Integración continua: se integra el sistema muchas veces al día, cada vez que se complete una tarea.
-10. 40 horas a la semana: como regla, no se trabaja más de 40 horas a la semana. Nunca se trabajan horas extras una segunda semana consecutiva.
-11. Cliente in situ: se incluye al usuario real y en vivo en el equipo, disponible a tiempo completo para responder preguntas.
-12. Estándares de codificación: los programadores escriben todo el código de acuerdo con reglas que enfatizan la comunicación a través del código.
+1. **Juego de la planificación**: se determina rápidamente el alcance de la próxima versión combinando las prioridades del negocio y las estimaciones técnicas.
+2. **Pequeños release**: El equipo de desarrollo debe ser capaz de liberar versiones iterativas con frecuencia a los clientes.
+3. **Metáfora**: permite guiar todo el desarrollo con una sencilla historia compartida de cómo funciona todo el sistema.
+4. **Diseño simple**: el sistema debe diseñarse de la manera más simple posible en cualquier momento. La complejidad adicional se elimina tan pronto como se descubre.
+5. **Pruebas**: los programadores escriben continuamente pruebas unitarias, que deben ejecutarse sin problemas para que continúe el desarrollo. Los clientes escriben pruebas que demuestran que las funciones están terminadas.
+6. **Refactorización**: los programadores reestructuran el sistema sin cambiar su comportamiento para eliminar la duplicación, mejorar la comunicación, simplificar o agregar flexibilidad.
+7. **Programación por pares**: todo el código de producción se escribe con dos programadores en una sola máquina.
+8. **Propiedad colectiva**: cualquiera puede cambiar cualquier código en cualquier lugar del sistema en cualquier momento.
+9. **Integración continua**: se integra el sistema muchas veces al día, cada vez que se complete una tarea.
+10. **40 horas a la semana**: como regla, no se trabaja más de 40 horas a la semana. Nunca se trabajan horas extras una segunda semana consecutiva.
+11. **Cliente in situ**: se incluye al usuario real y en vivo en el equipo, disponible a tiempo completo para responder preguntas.
+12. **Estándares de codificación**: los programadores escriben todo el código de acuerdo con reglas que enfatizan la comunicación a través del código.
 
 #### El Proceso de Desarrollo
 
