--- a/3° Año/Metodología de Sistemas I/Unidad 9/3. SCUM.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 9/3. SCUM.md
@@ -10,7 +10,7 @@ Cuya principales características son las siguientes:
 - Feedback del producto y proceso en cada iteración.
 - Cada entrega contiene un conjunto de características completas funcionales que pueden ponerse en producción.
 
-Al contrario que XP, SCRUM es mucho más complicado para poner en marcha y llevar a cabe, ay que requiere mucha más coordinación, comunicación y roles predeterminados que deben cumplir un determinado grupo de personas. Pero a grandes rasgos un ciclo normal de SCRUM sería el siguiente mostrado en la imagen.
+Al contrario que XP, SCRUM es mucho más complicado para poner en marcha y llevar a cabo, requiere mucha más coordinación, comunicación y roles predeterminados que deben cumplir un determinado grupo de personas. Pero a grandes rasgos un ciclo normal de SCRUM sería el siguiente mostrado en la imagen.
 
 ![[MS-scrum.png]]
 
