--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -127,6 +127,9 @@ Una hipótesis es una afirmación tentativa sujeta a verificación. Pueden ser e
 #### Formas de Clasificación de las Hipótesis
 
 - **Hipótesis de Investigación**: Este tipo de hipótesis son descriptivas de un valor o dato pronosticado, correlacionales, de diferencia de grupos, o incluso causales.
-- **Hipótesis Nulas**: Las hipótesis nulas son, en cierto modo, el reverso de las hipótesis de investigación. Por Ej.: partiendo de la siguiente hipótesis "*El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo*.", la hipótesis nula de esta sería la siguiente: "*El uso de servicios en la nube ***no*** provoca una mejora en la productividad de los trabajos realizados en equipo*."
+- **Hipótesis Nulas**: Las hipótesis nulas son, en cierto modo, el reverso de las hipótesis de investigación. Por Ej.: partiendo de la siguiente hipótesis "*El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo*.", la hipótesis nula de esta sería la siguiente: "*El uso de servicios en la nube no provoca una mejora en la productividad de los trabajos realizados en equipo*."
 - **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan éstas inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
+
+>[!caution] Navaja de Ockham
+>El principio de la Navaja de Ockham es fundamental en la ciencia y la metodología de investigación. Se utiliza para abogar por la simplicidad en la formulación de teorías científicas y en la resolución de problemas. La Navaja de Ockham sugiere que, cuando se busca una explicación para un fenómeno, se deben evitar las explicaciones innecesariamente complejas. En la investigación y la formulación de teorías científicas, se busca simplificar y reducir al mínimo las suposiciones y las variables para llegar a una teoría elegante y efectiva.
 
