--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -59,7 +59,7 @@ Cuando el tamaño de las páginas es grande, también lo son las tablas de pági
 
 #### Tablas de Páginas Invertidas
 
-Las tablas de páginas invertidas tienen una entrada por cada página real de la memoria. Cada entrada está constituida de la dirección virtual de la página almacenada en dicha ubicación de memoria real, e incluye información acerca del proceso que posee esa página. Por lo tanto, en el sistema solo habrá una sola tabla de páginas y dicha tabla tendrá una entrada por cada página de memoria física.
+Las tablas de páginas invertidas tienen una entrada por cada página real de la memoria. Cada entrada está constituida de la dirección virtual de la página almacenada en dicha ubicación de memoria real, y la información del proceso propietario de esa página. Por lo tanto, en el sistema solo habrá una sola tabla de páginas y dicha tabla tendrá una entrada por cada página de memoria física.
 
 >[!tldr] Fallo de Página
 >El fallo de página se genera cuando el procesador solicita una instrucción que se encuentra en una página que no tiene asignado ningún marco en la memoria principal, si eso sucede la MMU pasa el control al Sistema Operativo y trae a memoria principal la página donde se encuentra dicha dirección. La secuencia de pasos que se sigue es la siguiente:
@@ -78,3 +78,12 @@ Las tablas de páginas cuenta con una serie de bits que utilizan como indicadore
 	- 11 -> lectura, escritura y ejecución.
 - **Bit Modificado**: Cuando el bit es 1 nos indica que el marco asociado a la página ha sido modificado, cunado este es 0 índica que el marco asociado a la página no ha sido modificado.
 - **Bit de Referencia**: Este bit es utilizado por algunos algoritmos de reemplazo de página. Cuando el bit está en 1 indica que la página ha sido referenciada, y cunado el bit es 0 indica que la página no ha sido referenciada.
+
+### Segmentación
+
+En el sistema de segmentación se toma a la memoria principal como un gran hueco en el que se puede ir colocando los diferentes procesos, en este esquema cada una de las rutinas pertenecientes al proceso son de tamaño variable, es por eso que el sistema operativo necesita almacenar un registro base y uno límite, en primer lugar por motivos de seguridad y en segundo lugar para saber cuando sé termina las instrucciones de una rutina.
+A nivel de implementación, todos los sistemas operativos que utilizan segmentación cuentan con una tabla de segmentos, que posee cada uno de los segmentos que se encuentran en memoria, esta tabla posee dos datos muy importantes, la base del segmento y su tamaño. En este esquema la siguiente instrucción a ejecutar está conformada por el siguiente par \<id_segmento, desplazamiento\>.
+
+>[!tldr] Segmentación Paginada
+>En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divido en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento.
+
