Corrección de redacción

--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -1,26 +1,26 @@
 
 #### Legibilidad
 
-La legibilidad está relacionada con la facilidad con que los programas escritos en un determinado lenguaje de programación puedan leerse y entenderse fácilmente. Este criterio es muy importante de cara al mantenimiento del código y debe ser tenido en cuenta de acuerdo al dominio del problema.
+La legibilidad está relacionada a la facilidad con que los programas escritos en un determinado lenguaje de programación puedan leerse y entenderse fácilmente. Este criterio es muy importante de cara al mantenimiento del código y debe ser tenido en cuenta de acuerdo al dominio del problema.
 Las características de diseño que la influencian este criterio son las siguientes:
 
-- **Simplicidad**: Si bien la característica de simplicidad va relacionada con la cantidad de componentes básicos del lenguaje, esto le puede quitar expresividad al lenguaje. Además, los lenguajes que optan por este criterio por lo general cuentan con múltiples formas para escribir la misma expresión, por ejemplo: **a = a + 1** que es lo mismo que **a += 1** o **a++**. Sin contar que por lo general cuentan con operadores sobrecargados, lo que puede dificultar la legibilidad en algunos casos.
-- **Ortogonalidad**: Un lenguaje de programación ortogonal es aquel que tiene un conjunto pequeño y coherente de instrucciones y reglas sintácticas, lo que significa que las construcciones del lenguaje son simples y se pueden combinar de manera predecible para realizar tareas complejas. Para que quede más claro pongamos el siguiente ejemplo, supongamos que tenemos un lenguaje de programación que posee 3 primitivos (int, float y double) y dos estructuras de datos (array, puntero), el lenguaje sería ortogonal si yo pudiera asignarle esos tres tipos de datos tanto al puntero como al array.
+- **Simplicidad**: Si bien la característica de simplicidad va relacionada con la cantidad de componentes básicos del lenguaje, esto le puede quitar expresividad al lenguaje. Además, los lenguajes simples por lo general cuentan con múltiples formas para escribir la misma expresión, por ejemplo: **a = a + 1** que es lo mismo que **a += 1** o **a++**. Sin contar que por lo general cuentan con operadores sobrecargados, lo que puede dificultar la legibilidad en algunos casos.
+- **Ortogonalidad**: Un lenguaje de programación ortogonal es aquel que tiene un conjunto pequeño y coherente de instrucciones y reglas sintácticas, lo que significa que las construcciones del lenguaje son simples y se pueden combinar de manera predecible para realizar tareas complejas. Por ejemplo, supongamos que tenemos un lenguaje de programación que posee 3 primitivos (int, float y double) y dos estructuras de datos (array, puntero), el lenguaje sería ortogonal si se puede asignar esos tres tipos de datos tanto al puntero como al array.
 
 >[!caution] Excepciones a la Regla
 >Supongamos que otro lenguaje de programación no permite asignar punteros para apuntar a un array, esto no sería una falta de ortogonalidad, sino que es una *excepción a la regla* establecida por el lenguaje.
->Para evitar esta que ocurran muchas de estas excepciones a las reglas se debe encontrar un nivel adecuado de ortogonalidad, de este modo el lenguaje poseerá una mayor regularidad y será más fácil de aprender, leer y escribir. Por el contrario, si el lenguaje posee mucha ortogonalidad, la complejidad se tornará innecesariamente alta, y en caso de que la ortogonalidad sea baja, esto derivaría en muchas excepciones a la regla.
+>Para evitar esta que ocurran muchas de estas excepciones a las reglas se debe encontrar un nivel adecuado de ortogonalidad, de este modo el lenguaje poseerá una mayor regularidad y será más fácil de aprender, leer y escribir. Por el contrario, si el lenguaje posee mucha ortogonalidad, el lenguaje poseerá una complejidad innecesariamente alta, y en caso de que la ortogonalidad sea baja, esto derivaría en muchas excepciones a la regla.
 
 - **Tipos de datos**: Esta característica va relacionada con la facilidad de definir tipos y estructuras de datos.
-- **Diseño de sintaxis**: Posiblemente, la característica que más afecte a la legibilidad, al momento de crear la sintaxis de un lenguaje de programación, se deben tener en cuanta todos los aspectos relacionados con las palabras especiales, como podrían ser la forma de las palabras especiales, la forma de las sentencias compuestas sobre todo de las estructuras de control donde se emplean estas palabras especiales, si estas palabras especiales pueden ser utilizadas como identificadores, aunque este último no es muy recomendable, ya que disminuye la legibilidad de los programas y los torna confusos. Otro aspecto fundamental a la hora de crear la sintaxis es la forma y significado de cada una de las sentencias del lenguaje, por lo general se busca que, al menos de forma parcial, se sepa cuál va a ser su propósito.
+- **Diseño de sintaxis**: Posiblemente, la característica que más afecte a la legibilidad. Al momento de crear la sintaxis de un lenguaje de programación, se deben tener en cuanta todos los aspectos relacionados con las ***palabras especiales***, como podrían ser la forma de las palabras especiales, la forma de las sentencias compuestas que contienen a estas palabras especiales (estructuras de control), y si estas palabras especiales pueden ser utilizadas como identificadores, aunque este último no es muy recomendable, ya que disminuye la legibilidad de los programas y los torna confusos. Otro aspecto fundamental a la hora de crear la sintaxis es la forma y significado de cada una de las sentencias del lenguaje, por lo general se busca que, al menos de forma parcial, se sepa cuál va a ser su propósito.
 
 >[!tldr] Simplicidad vs Legibilidad
 >Si bien tanto la simplicidad como la legibilidad son aspectos muy importantes a la hora del diseño, se debe encontrar un equilibrio entre estos dos atributos, ya que un lenguaje extremadamente simple le quita legibilidad al código escrito en este, mientras que un lenguaje muy legible su código se torna difícil de escribir.
 
 #### Facilidad de Escritura
 
-Este criterio va a depender de las mismas características que el criterio de ***legibilidad***, pero al mismo tiempo de otras extras como del *soporte a la abstracción* y su *expresividad*. Por un lado, se debe encontrar un equilibrio entre simplicidad y ortogonalidad con un número pequeño de estructuras primitivas y un uso limitado de la ortogonalidad. En cuanto al soporte a la abstracción, se debe fijar si el lenguaje en cuestion cuanta con abstracción de procesos (funciones, procedimientos, paquetes, etc) y con abstracción de datos (clases, estructuras).
-En cuanto a la expresividad, puede referirse a varias características diferentes, por ejemplo APL cuanta con muchos operadores poderosos, permitiendo lograr muchos cálculos en pocas líneas de código -> +/ 1 2 3 cuya saluda es 6. En cambio, otros lenguajes de programación optan por simplificar la forma de escribir los cálculos o especificar las estructuras de control, algunos de estos ejemplos son:
+Este criterio va a depender de las mismas características que el criterio de ***legibilidad***, pero al mismo tiempo de otras extras como del *soporte a la abstracción* y su *expresividad*. Por un lado, se debe encontrar un equilibrio entre simplicidad y ortogonalidad con un número pequeño de estructuras primitivas y un uso limitado de la ortogonalidad. En cuanto al soporte a la abstracción, se debe fijar si el lenguaje cuanta con mecanismos de abstracción de procesos (funciones, procedimientos, paquetes, etc) y de abstracción de datos (clases, estructuras, registros, etc).
+La expresividad, por su parte, puede referirse a varias características diferentes, por ejemplo APL cuanta con muchos operadores poderosos, que permiten lograr muchos cálculos en pocas líneas de código. Por Ej.: +/ 1 2 3 cuya saluda es 6. En cambio, otros lenguajes de programación optan por simplificar la forma de escribir los cálculos o especificar las estructuras de control, algunos de estos ejemplos son:
 
 - En C, la notación: **count++** es más conveniente y más corta que: **count = count + 1**
 - En Ada, el operador booleano **and then** es conveniente para especificar evaluación en cortocircuito.
@@ -32,19 +32,23 @@ Este criterio está relacionado con la capacidad de los programas de realizar su
 
 - **Chequeo de tipos**: El chequeo de tipos puede ocurrir en dos momentos distintos:
 	- En Java, se llevan a cabo los chequeos de tipos de todas las variables y expresiones en tiempo de compilación. Lo que té asegura que no se produzca ningún error al momento de la ejecución.
-	- En la versión original de C, no se realizaban chequeos de tipos entre parámetros en una llamada a una función.
-	- Una cosa importante a destacar es si se realiza un chequeo del rango de los subíndices al momento de la compilación.
+	- En lenguajes como Python o PHP, el chequeo de tipos se realiza durante la ejecución, esto le quita un poco de confiabilidad al lenguaje, ya que los errores se tienen que buscar ejecutando el código.
+
+>[!tldr] Casos Particulares
+>En la versión original de C, no se realizaban chequeos de tipos entre parámetros en una llamada a una función, produciéndose múltiples errores en tiempo de ejecución.
+>Otro aspecto importante a destacar es si se realiza un chequeo del rango de los subíndices al momento de la compilación o si este se realiza durante la ejecución.
+
 - **Manejo de excepciones**: Es la capacidad de un programa de interceptar los errores de ejecución, tomar las medidas correctivas, y continuar. Ada, C++, Java y C# incluyen manejo de excepciones, pero C no.
- - **Alias**: Significa tener dos o más identificadores, para la misma celda de memoria. En algunos lenguajes, el alias se usa para superar las deficiencias en las facilidades de abstracción de datos. Otros lenguajes lo restringen.
+ - **Alias**: Significa tener dos o más identificadores, para la misma celda de memoria. En algunos lenguajes, el alias se usa para superar las deficiencias en las facilidades de abstracción de datos, mientras que otros lenguajes lo restringen.
 
 #### Costo
 
-A niveles generales, los costos de un determinado lenguaje de programación se puede medir de acuerdo a diferentes criterios
+A niveles generales, los costos relacionados con el uso de un determinado lenguaje de programación se puede medir de acuerdo a diferentes criterios:
 
 - **Costo de entrenar programadores para usar el lenguaje**: va a depender de la simplicidad y ortogonalidad del lenguaje y la experiencia de los programadores.
-- **Costo de escribir programas en el lenguaje**: ca a estar determinado por la facilidad de escritura del lenguaje, aunque también depende del grado de vinculación con el propósito de la aplicación particular.
-- **Costo de compilación**: está relacionado con el hecho de que el compilador del lenguaje sea de uso libre o si este es de paga, aunque también está relacionado al nivel de optimización que se le hace al código compilado.
-- **Costo de ejecución**: este aspecto se ve influenciado por el diseño del lenguaje y si el chequeo de tipos en tiempo de ejecución.
+- **Costo de escribir programas en el lenguaje**: va a estar determinado por la facilidad de escritura del lenguaje, aunque también depende del grado de vinculación con el propósito de la aplicación particular.
+- **Costo de compilación**: está relacionado con el hecho de que el compilador del lenguaje sea de uso libre o si este es de paga, aunque también está relacionado con el nivel de optimización que se le hace al código compilado.
+- **Costo de ejecución**: este aspecto se ve influenciado por el diseño del lenguaje, por ejemplo, si el chequeo de tipos se realiza en tiempo de ejecución, se deberá tener cargada la tabla de símbolos en memoria todo el tiempo, lo que se traduce en un mayor uso de memoria y una mayor sobrecarga al procesador.
 - **Costo del sistema de implementación**: relacionado a la disponibilidad de compiladores gratuitos.
 - **Costo relacionado con la confiabilidad**: poca confiabilidad lleva a costos muy altos.
 - **Costo de mantenimiento**: depende de varias características del lenguaje, principalmente de la legibilidad.
