Se termino de agregar todo al resumen de LP y se completo lo de PyE

--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -4,7 +4,7 @@
 La legibilidad está relacionada a la facilidad con que los programas escritos en un determinado lenguaje de programación puedan leerse y entenderse fácilmente. Este criterio es muy importante de cara al mantenimiento del código y debe ser tenido en cuenta de acuerdo al dominio del problema.
 Las características de diseño que la influencian este criterio son las siguientes:
 
-- **Simplicidad**: Si bien la característica de simplicidad va relacionada con la cantidad de componentes básicos del lenguaje, esto le puede quitar expresividad al lenguaje. Además, los lenguajes simples por lo general cuentan con múltiples formas para escribir la misma expresión, por ejemplo: **a = a + 1** que es lo mismo que **a += 1** o **a++**. Sin contar que por lo general cuentan con operadores sobrecargados, lo que puede dificultar la legibilidad en algunos casos.
+- **Simplicidad**: Si bien la característica de simplicidad va relacionada con la cantidad de componentes básicos del lenguaje, esto le puede quitar expresividad al lenguaje. Además, los lenguajes simples por lo general cuentan con múltiples formas para escribir la misma expresión, por ejemplo: **a = a + 1** que es lo mismo que **a += 1** o **a++**, por lo general esto quita simplicidad a los lenguajes. Sin contar que por lo general cuentan con operadores sobrecargados, lo que puede dificultar la legibilidad en algunos casos.
 - **Ortogonalidad**: Un lenguaje de programación ortogonal es aquel que tiene un conjunto pequeño y coherente de instrucciones y reglas sintácticas, lo que significa que las construcciones del lenguaje son simples y se pueden combinar de manera predecible para realizar tareas complejas. Por ejemplo, supongamos que tenemos un lenguaje de programación que posee 3 primitivos (int, float y double) y dos estructuras de datos (array, puntero), el lenguaje sería ortogonal si se puede asignar esos tres tipos de datos tanto al puntero como al array.
 
 >[!caution] Excepciones a la Regla
@@ -19,7 +19,7 @@ Las características de diseño que la influencian este criterio son las siguien
 
 #### Facilidad de Escritura
 
-Este criterio va a depender de las mismas características que el criterio de ***legibilidad***, pero al mismo tiempo de otras extras como del *soporte a la abstracción* y su *expresividad*. Por un lado, se debe encontrar un equilibrio entre simplicidad y ortogonalidad con un número pequeño de estructuras primitivas y un uso limitado de la ortogonalidad. En cuanto al soporte a la abstracción, se debe fijar si el lenguaje cuanta con mecanismos de abstracción de procesos (funciones, procedimientos, paquetes, etc) y de abstracción de datos (clases, estructuras, registros, etc).
+Este criterio va a depender de las mismas características que el criterio de ***legibilidad***, pero al mismo tiempo de otras extras como del *soporte a la abstracción* y su *expresividad*. Por un lado, se debe encontrar un equilibrio entre simplicidad y ortogonalidad con un número pequeño de estructuras primitivas y un uso limitado y adecuado de la ortogonalidad. En cuanto al soporte a la abstracción, se debe fijar si el lenguaje cuanta con mecanismos de abstracción de procesos (funciones, procedimientos, paquetes, etc) y de abstracción de datos (clases, estructuras, registros, etc).
 La expresividad, por su parte, puede referirse a varias características diferentes, por ejemplo APL cuanta con muchos operadores poderosos, que permiten lograr muchos cálculos en pocas líneas de código. Por Ej.: +/ 1 2 3 cuya saluda es 6. En cambio, otros lenguajes de programación optan por simplificar la forma de escribir los cálculos o especificar las estructuras de control, algunos de estos ejemplos son:
 
 - En C, la notación: **count++** es más conveniente y más corta que: **count = count + 1**
@@ -28,7 +28,7 @@ La expresividad, por su parte, puede referirse a varias características diferen
 
 #### Confiabilidad
 
-Este criterio está relacionado con la capacidad de los programas de realizar sus especificaciones bajo todas las condiciones. Este Criterio va a depender a su vez de todas las características de diseño descritas para la legibilidad como para la facilidad de escritura, sumadas a otros tres criterios propios, los cuales son:
+Este criterio está relacionado con la capacidad de los programas de realizar sus especificaciones bajo todas las condiciones. Este Criterio va a depender a su vez de todas las características de diseño descritas tanto para el criterio de legibilidad como para la facilidad de escritura, sumadas a otros tres criterios propios, los cuales son:
 
 - **Chequeo de tipos**: El chequeo de tipos puede ocurrir en dos momentos distintos:
 	- En Java, se llevan a cabo los chequeos de tipos de todas las variables y expresiones en tiempo de compilación. Lo que té asegura que no se produzca ningún error al momento de la ejecución.
@@ -47,14 +47,19 @@ A niveles generales, los costos relacionados con el uso de un determinado lengua
 
 - **Costo de entrenar programadores para usar el lenguaje**: va a depender de la simplicidad y ortogonalidad del lenguaje y la experiencia de los programadores.
 - **Costo de escribir programas en el lenguaje**: va a estar determinado por la facilidad de escritura del lenguaje, aunque también depende del grado de vinculación con el propósito de la aplicación particular.
-- **Costo de compilación**: está relacionado con el hecho de que el compilador del lenguaje sea de uso libre o si este es de paga, aunque también está relacionado con el nivel de optimización que se le hace al código compilado.
+- **Costo de compilación**: está relacionado con el tamaño del compilador, el tiempo que tarda en traducir el código fuente y también está relacionado con si el compilador es de paga.
 - **Costo de ejecución**: este aspecto se ve influenciado por el diseño del lenguaje, por ejemplo, si el chequeo de tipos se realiza en tiempo de ejecución, se deberá tener cargada la tabla de símbolos en memoria todo el tiempo, lo que se traduce en un mayor uso de memoria y una mayor sobrecarga al procesador.
 - **Costo del sistema de implementación**: relacionado a la disponibilidad de compiladores gratuitos.
 - **Costo relacionado con la confiabilidad**: poca confiabilidad lleva a costos muy altos.
-- **Costo de mantenimiento**: depende de varias características del lenguaje, principalmente de la legibilidad.
-
----
+- **Costo de mantenimiento**: depende de varias características del lenguaje, principalmente de la legibilidad y facilidad de escritura.
 
 >[!tldr] Criterios Adicionales
 >Debido a que no existe un consenso general a la hora de establecer los criterios de evaluación de un lenguaje de programación, otros autores también tienen en cuenta aspectos como la portabilidad, la generalidad y la buena definición de un lenguaje al momento de su evaluación.
+
+## Atributos de los Lenguajes de Acuerdo al Software que Producen
+
+![[LP-final.png]]
+
+>[!note] Nota
+>La localidad se refiere al poder saber en qué lugar se encuentra el error que se produjo.
 
