--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -87,3 +87,16 @@ A nivel de implementación, todos los sistemas operativos que utilizan segmentac
 >[!tldr] Segmentación Paginada
 >En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divido en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento.
 
+---
+
+#### Cosas que fue diciendo Berón
+
+- A partir de la existencia del sistema operativo, ninguna dirección lógica coincide con las direcciones físicas, a excepción de las de sistema operativo.
+- En paginación, si el tamaño de la página es grande, se disminuye el grado de multiprogramación, pero se disminuye el fallo de página. Cuando el tamaño de página es pequeño, aumenta el grado de multiprogramación, pero también aumenta el riesgo de fallo de página.
+- El pedir una dirección lógica que se encuentra por fuera del espacio de direcciones puede pasar al momento de la ejecución cuando el procesador pide una dirección incorrecta.
+- En paginación para calcular la dirección física en donde se encuentra la siguiente instrucción se utiliza el PID para acceder a la tabla de páginas del proceso, luego se busca el número de página, si ésta está presenta en memoria principal entonces se utiliza el desplazamiento para saber cuál va a ser la posición de memoria correspondiente a esa instrucción, en caso de que la página no esté presente, se guardará el contexto del proceso y se lo pondrá en espera de esa página.
+- En la memoria cache solo se encuentra información relacionada con lo proceso en ejecución, cada vez que se realiza un cambio de contexto todos los registros de la cache se borran para evitar el acceso indeseado a información residual. Las cache de nivel 1 y 2 tienen información que es utilizada por cada núcleo, mientras que el nivel 3 es una memoria común a todos los núcleos.
+- En el sistema de asociados, la memoria principal es partida a la mitad la cantidad de veces que sea necesario hasta que se llegue al mejor espacio posible para poder asignar un segmento.
+- La segmentación es visible al usuario, ya que los programadores pueden optimizar el código de forma tal de que ocupen mucho menos espacio en memoria.
+- La localidad espacial hace referencia a que después de ejecutar una instrucción, lo más probable es que se ejecute al siguiente. Y la localidad temporal se refiere a que en una rutina puede que se repita la ejecución de determinadas instrucciones, un número determinado de veces.
+- En los sistemas por demanda el procesador se va pidiendo las instrucciones a medida que el procesador las va solicitando, en el sistema de predicción se sube un grupo de instrucciones/datos al mismo tiempo, esto produce polución en los distintos niveles de cache.
