--- a/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
@@ -33,7 +33,7 @@ Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalme
 ##### Excepciones
 
 Las excepciones son eventos inusuales producidos por la ocurrencia de un error u otro evento inesperado durante la ejecución de nuestro programa, el cual debe ser tratado de manera especial. Los lenguajes de programación que implementan excepciones por lo general cuentan con una sentencia que permite manejarlos manualmente, esto le brinda mayor robustez al lenguaje.
-Ahora bien, a la hora de la implementación de las excepciones se debe estables en primer lugar, se debe establecer en qué punto se va a devolver la ejecución en el programa, ya que de acuerdo a esta decisión se establece de qué manera se va a propagar la excepción.
+Ahora bien, a la hora de la implementación de las excepciones se debe establecer en qué punto se va a devolver la ejecución en el programa, ya que de acuerdo a esta decisión se establece de qué manera se va a propagar la excepción.
 
 ##### Eventos
 
