--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -48,9 +48,9 @@ De estas distintas semánticas se desprenden los dos grandes modelos de pasajes 
 
 Algunos lenguajes de programación permiten pasar unidades como parámetros de otras unidades, este tipo de cosas es más común entre lenguajes funcionales. Ahora bien, se debe tener en cuenta un par de aspectos a la hora de implementar este tipo de características, en primer lugar se debe saber como se va a realizar el chequeo de tipos al momento de llamar esa unidad dentro de la unidad llamada, además se debe pensar en como se va a resolver él referenciamiento a las variables no locales utilizadas en la unidad, para eso existen 3 mecanismos que pueden emplear los lenguajes de programación:
 
-- **Ligadura Superficial**: El entorno de referenciamiento tiene lugar en la unidad que realiza el llamado de la otra unidad.
+- **Ligadura Superficial**: El entorno de referenciamiento tiene lugar en la unidad que realiza el llamado de la unidad pasada como parámetro.
 - **Ligadura Profunda**: El entorno de referenciamiento está compuesto por todas las variables que forman parte del entorno de definición de la unidad.
-- **Ligadura Ad-Hoc**: El entorno de referenciamiento está determinado por la sentencia de donde está siendo llamada la unidad.
+- **Ligadura Ad-Hoc**: El entorno de referenciamiento está determinado por la sentencia de donde está siendo realizada la llamada a la unidad.
 
 ## Unidades Sobrecargadas
 
