Agrego cosa que falta en LP

--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -44,6 +44,20 @@ De estas distintas semánticas se desprenden los dos grandes modelos de pasajes 
 - **Por referencia al valor**: La principal ventaja de este método es que se ocupa menos memoria al momento de ejecutar los programas, con la desventaja de que puede causar efectos colaterales y que el acceso es más lento.
 	- **Referencia**: La unidad llamadora le pasa a la unidad llamada la dirección del parámetro real, haciendo que toda modificación al parámetro formal se refleje inmediatamente en el parámetro real. Semántica ***inout-mode***.
 	- **Nombre**: La unidad llamadora le pasa a la unidad llamada la dirección del parámetro real, con la diferencia que la ligadura del parámetro formal a esa celda de memoria se realiza cada vez que es referenciada dicha variable, este método es el más flexible, pero es complicado de implementar y es muy lento. Semántica ***inout-mode***.
+
+>[!tldr] Pasaje de los Parámetros Reales
+>Al momento de pasar los parámetros reales existen dos maneras de hacerlo: ***por posición*** o ***por nombres***. Veamos las diferencias en el siguiente ejemplo:
+>```Python
+>def persona(nombre: str, apellido: str, edad: int) -> None:
+>	print(f"Hola, me llamo {nombre} {apellido} y tengo {edad} años")
+>
+># pasaje de los parámetros según su posición
+>persona("Osvaldo", "Marquez", 70)
+>
+># pasaje de parámetros por nombre
+>persona(apellido="Marquez", nombre="Osvaldo", edad=70)
+>```
+>El pasaje por posición es el más efectivo y seguro, pero se tiene que respetar el orden de pasaje de los parámetros. En cambio, el pasaje por nombres permite que los parámetros puedan ser pasados en cualquier orden, con la desventaja de que el programador debe conocer el nombre de los parámetros formales.
 #### Unidades como Parámetros
 
 Algunos lenguajes de programación permiten pasar unidades como parámetros de otras unidades, este tipo de cosas es más común entre lenguajes funcionales. Ahora bien, se debe tener en cuenta un par de aspectos a la hora de implementar este tipo de características, en primer lugar se debe saber como se va a realizar el chequeo de tipos al momento de llamar esa unidad dentro de la unidad llamada, además se debe pensar en como se va a resolver él referenciamiento a las variables no locales utilizadas en la unidad, para eso existen 3 mecanismos que pueden emplear los lenguajes de programación:
