--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -11,14 +11,14 @@ Tanto las funciones como los procedimientos cuentan con una serie de caracterís
 3. Existe un control en la ejecución, los programas se ejecutan de forma jerárquica.
 #### Elementos en la definición de un Subprograma
 
-Al momento de definir una función, el encabezado o header es el que va a contener toda la ***firma*** como el ***protocolo*** de dicho subprograma. El encabezado de una función está compuesto por una palabra clave, un nombre (del procedimiento o función), la lista de parámetros que se le van a pasar y en algunos casos el tipo de retorno. Veamos esto último con un programa escrito en Python.
+Al momento de definir una función, el encabezado o header es el que va a contener toda la ***firma*** como el ***protocolo*** de dicha unidad. El encabezado de una función está compuesto por una palabra clave (y reservada en otros lenguajes), un nombre (del procedimiento o función), la lista de parámetros que se le van a pasar y en algunos casos el tipo de retorno. Veamos esto último con un programa escrito en Python.
 
 ```python
 # Sin declaración de tipos
 def fact(n):
 	return n * fact(n - 1) if n > 1 else 1
 
-# Con delcaración de tipos
+# Con declaración de tipos
 def fact(n : int) -> int:
 	return n * fact(n - 1) if n > 1 else 1
 ```
@@ -30,7 +30,7 @@ Si bien en Python la declaración del tipo en los parámetros y el retorno no es
 
 ## Pasaje de Parámetros
 
-La comunicación con una función puede ocurrir de manera implícita mediante las variables globales, y de forma explícita a través del pasaje de parámetros, en este último caso tendremos parámetros formales que son aquellos definidos en el encabezado de la función y los parámetros reales que son aquellos que se le pasa a la función cuando es llamada.
+La comunicación con una función puede ocurrir de manera implícita mediante las variables globales (implica efectos colaterales), y de forma explícita a través del pasaje de parámetros, en este último caso tendremos parámetros formales (atributos, unidad 3) que son aquellos definidos en el encabezado de la función y los parámetros reales que son aquellos que se le pasa a la función cuando es llamada.
 Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan los distintos modelos conceptuales utilizados por los lenguajes. Dichas semánticas quedan explicadas gráficamente en la siguiente imagen:
 
 ![[Screenshot_20230901_135735.png]]
