Correcion de nombre imagen

--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -33,7 +33,7 @@ Si bien en Python la declaración del tipo en los parámetros y el retorno no es
 La comunicación con una función puede ocurrir de manera implícita mediante las variables globales (implica efectos colaterales), y de forma explícita a través del pasaje de parámetros, en este último caso tendremos parámetros formales (atributos, unidad 3) que son aquellos definidos en el encabezado de la función y los parámetros reales que son aquellos que se le pasa a la función cuando es llamada.
 Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan los distintos modelos conceptuales utilizados por los lenguajes. Dichas semánticas quedan explicadas gráficamente en la siguiente imagen:
 
-![[Screenshot_20230901_135735.png]]
+![[semanticasParametros.png]]
 
 De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
 
