--- a/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
@@ -23,7 +23,7 @@ Este tipo de unidades pueden ser planificadas para que su ejecución ocurra lueg
 
 ##### Paralelas
 
-Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalmente como ***Tareas*** o ***Procesos***, para que este tipo de unidades puedan ser ejecutadas se tienen que cumplir una serie de condiciones, primero el equipo en donde se lo va a ejecutar debe poseer una arquitectura multiprocesador o multinucleo, en segundo lugar el sistema operativo de esa máquina debe reconocer y detectar los hilos y por último el lenguaje de programación debe proveer los mecanismos y herramientas necesarios para que el programador puede realizar tareas en paralelo. Por ejemplo, Java con la clase *Treads* y ADA con las *Tasks*.
+Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalmente como ***Tareas*** o ***Procesos***, para que este tipo de unidades puedan ser ejecutadas se tienen que cumplir una serie de condiciones, primero el equipo en donde se lo va a ejecutar debe poseer una arquitectura multiprocesador o multinucleo, en segundo lugar el sistema operativo de esa máquina debe reconocer y detectar los hilos y por último el lenguaje de programación debe proveer los mecanismos y herramientas necesarios para que el programador puede realizar tareas en paralelo. Por ejemplo, Java con la clase *Threads* y ADA con las *Tasks*.
 
 >[!note] Nota
 >Al momento de la implementación de este tipo de mecanismos se debe tener en cuenta una serie de cosas, en primer lugar si las variables a las que van a acceder las distintas tareas van a requerir sincronización o no, en segundo lugar como el lenguaje va a proveer el mecanismo para la intercomunicación entre las tareas, si va a ser a través de memoria compartida o por pasaje de mensajes.
