--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -35,7 +35,7 @@ Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan
 
 ![[semanticasParametros.png]]
 
-De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
+De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros (modelos conceptuales) que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
 
 - **Por copia de valor**: Este tipo de métodos es mucho más seguro, ya que se protege al parámetro real y permite usar expresiones como parámetro real en el llamado a la unidad, con la desventaja de que a nivel de memoria es mucho más costoso.
 	- **Por valor**: El valor del parámetro real se copia en el formal y una vez se termina de ejecutar el parámetro real se mantiene intacto. Semántica ***in-mode***.
@@ -82,7 +82,7 @@ A medida que los programas se van volviendo más y más grandes, los diferentes 
 Para responder a estas necesidades, los lenguajes crearon mecanismos que permite agrupar distintas unidades relacionadas en un mismo lugar, de modo que puedan ser compilados por separado cada vez que se modifica algo de estas unidades. De esto se desprende dos maneras de compilar que emplean los lenguajes, entre ellas están:
 
 - **Compilación separada**: En la compilación separada, las unidades se compilan siguiendo un orden, un lenguaje que utiliza este mecanismo es ADA.
-- **Compilación Independiente**: Se compilan las unidades sin seguir un orden especifico.
+- **Compilación Independiente**: Se compilan las unidades sin seguir un orden específico.
 
 #### Encapsulamiento de Nombres
 
